<resources>
    <string name="app_name">pmdm-mayo</string>
    <string name="clients">clients</string>
    <string name="delete">delete\n</string>
    <string name="Add">Añadir</string>
    <string name="save">save</string>
    <string name="back">Volver</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="dni">DNI</string>
    <string name="sales">Concepto Ventas</string>
    <string name="eur">Total (€)</string>
    <string name="add_sale">Añadir Venta</string>
    <string name="vip">vip\n</string>
</resources>