<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <Spinner
        android:id="@+id/spinnerDni"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
    android:id="@+id/inputConcept"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:hint="@string/sales"
    android:inputType="text"
    android:padding="12dp"
    app:layout_constraintTop_toBottomOf="@id/spinnerDni"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/inputTotal"
    app:layout_constraintWidth_percent="0.5"
    android:layout_marginTop="16dp"
    android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/inputTotal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/eur"
        android:inputType="numberDecimal"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerDni"
        app:layout_constraintStart_toEndOf="@id/inputConcept"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.5"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp" />

    <Button
        android:id="@+id/btnSaveSale"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintTop_toBottomOf="@id/inputTotal"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/btnBackSale"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintTop_toBottomOf="@id/inputTotal"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp"
         />

</androidx.constraintlayout.widget.ConstraintLayout>
